recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:2: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:3: error: identifier expected but ')' found.
  left(90.)
          ^FourSquare:4: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:5: error: identifier expected but ')' found.
  left(90.)
          ^FourSquare:6: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:7: error: identifier expected but ')' found.
  left(90.)
          ^FourSquare:8: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:12: error: identifier expected but ')' found.
  right(90.)
           ^